--- a/app/styles/spirit/_custom-styles.css
+++ b/app/styles/spirit/_custom-styles.css
@@ -165,7 +165,7 @@ button, .btn-base {
 ---------------------------------------------------------- */
 [data-tooltip] {
     position: relative;
-    z-index: 9999;
+    z-index: 600;
 }
 
 [data-tooltip]:before {
